--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,18 +23,19 @@ a {
 }
 
 nav {
-  padding: 22px 0;
+  padding: 20px 0;
   background-color: $background;
 
   .logo {
     img {
-      max-height: 36px;
+      max-height: 32px;
     }
   }
 
   .nav {
     li {
       a {
+        padding: 0 1rem;
         color: $blue_2;
         font-size: 1.1rem;
         font-weight: 500;
@@ -55,9 +56,9 @@ nav {
 
   .input_search {
     width: 100%;
-    padding: 11px 18px;
+    padding: 10px 16px;
     border: none;
-    font-size: 1.2rem;
+    font-size: 1rem;
     border-radius: 60px;
 
     &:focus {
@@ -68,14 +69,14 @@ nav {
 
   .btnSearch {
     position: absolute;
-    right: -1px;
-    width: 52px;
-    height: 52px;
+    right: 0;
+    width: 46px;
+    height: 46px;
     border: none;
+    font-size: 0.9rem;
     background-color: $orange;
     border-radius: 100%;
     transition: all 0.2s ease-in;
-    font-size: 0.9rem;
 
     &:hover {
       background-color: #ff876f;
@@ -116,8 +117,8 @@ nav {
 }
 
 .box_selection {
-  padding: 30px;
-  margin: 0 30px;
+  padding: 20px;
+  margin: 0 20px;
   box-shadow: 0px 30px 40px 0px rgba($color: $blue_1, $alpha: 0.1);
   background-color: #fff;
   border-radius: 20px;
@@ -166,6 +167,7 @@ nav {
       h2 {
         color: $blue_2;
         text-transform: capitalize;
+        font-size: 1.8rem;
       }
     }
   }
@@ -188,9 +190,9 @@ header {
 
     h1 {
       color: $blue_1;
-      font-size: 3.2rem;
+      font-size: 3rem;
       font-weight: 600;
-      line-height: 2.8rem;
+      line-height: 2.4rem;
     }
 
     p {
@@ -326,7 +328,7 @@ header {
     h1 {
       position: relative;
       color: $orange;
-      font-size: 2rem;
+      font-size: 1.8rem;
       font-weight: 600;
 
       &:after {
@@ -369,7 +371,6 @@ header {
       li {
         a {
           color: rgb(199, 199, 199);
-          font-size: 1.2rem;
 
           &:hover,
           &.active {
@@ -681,22 +682,22 @@ footer {
       margin-bottom: 60px;
 
       ul {
-        gap: 40px;
         display: flex;
-        justify-content: center;
         flex-direction: row;
+        justify-content: center;
+        gap: 40px;
 
         li {
           a {
             .circle {
               display: block;
+              display: flex;
+              justify-content: center;
+              align-items: center;
               width: 60px;
               height: 60px;
               background-color: #fff;
               border-radius: 100%;
-              display: flex;
-              align-items: center;
-              justify-content: center;
 
               .bx {
                 color: $blue_1;
@@ -720,10 +721,10 @@ footer {
 
   .box_footer_linea {
     display: block;
-    height: 2px;
-    width: 100%;
-    background-color: #fff;
     opacity: 0.2;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
     margin-bottom: 20px;
   }
 
