--- a/sass/style.scss
+++ b/sass/style.scss
@@ -166,8 +166,8 @@ nav {
     .title {
       h2 {
         color: $blue_2;
-        text-transform: capitalize;
         font-size: 1.8rem;
+        text-transform: capitalize;
       }
     }
   }
@@ -623,6 +623,162 @@ header {
   }
 }
 
+.box_contacto {
+  margin: 80px 0;
+
+  .box_contacto_woman {
+    display: flex;
+    position: relative;
+    justify-content: center;
+
+    img {
+      position: relative;
+      z-index: 6;
+      height: 360px;
+    }
+
+    .box_contacto_woman_circles {
+      display: flex;
+      position: absolute;
+      bottom: 218px;
+
+      justify-content: center;
+      align-items: center;
+      transition: all 0.4s ease-in-out;
+
+      .circle {
+        position: absolute;
+        border-radius: 100%;
+      }
+
+      .moveCirce {
+        animation-duration: 10s;
+        animation-timing-function: ease-in-out;
+        animation-iteration-count: infinite;
+      }
+
+      .circle_1 {
+        z-index: 3;
+        width: 160px;
+        height: 160px;
+        background-color: $blue_1;
+        animation-name: moveCircleIn_1;
+        @extend .moveCirce;
+        @extend .circle;
+
+        @keyframes moveCircleIn_1 {
+          from {
+            transform: translate(0, 0);
+          }
+
+          50% {
+            transform: translate(10px, 20px);
+          }
+
+          to {
+            transform: translate(0, 0);
+          }
+        }
+      }
+
+
+      .circle_2 {
+        z-index: 2;
+        width: 200px;
+        height: 200px;
+        background-color: $blue_3;
+        animation-name: moveCircleIn_2;
+        @extend .circle;
+        @extend .moveCirce;
+
+        @keyframes moveCircleIn_2 {
+          from {
+            transform: translate(0, 0);
+          }
+
+          50% {
+            transform: translate(-10px, -20px);
+          }
+
+          to {
+            transform: translate(0, 0);
+          }
+        }
+      }
+
+      .circle_3 {
+        z-index: 1;
+        width: 240px;
+        height: 240px;
+        background-color: $blue_4;
+        animation-name: moveCircleIn_3;
+        @extend .circle;
+        @extend .moveCirce;
+
+        @keyframes moveCircleIn_3 {
+          from {
+            transform: translate(0, 0);
+          }
+
+          50% {
+            transform: translate(20px, 10px);
+          }
+
+          to {
+            transform: translate(0, 0);
+          }
+        }
+      }
+    }
+  }
+
+  .box_contacto_title {
+    margin-bottom: 20px;
+
+    h2 {
+      color: $blue_2;
+    }
+
+    h6 {
+      color: #a1a1a1;
+    }
+  }
+
+  .box_contacto_forms {
+
+
+
+
+    .row,
+    .col-12 {
+      margin-bottom: 40px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+
+    input,
+    textarea {
+      padding: 10px 16px;
+      border: 1px solid rgba($color: $blue_2, $alpha: 0.02);
+      box-shadow: 0px 30px 40px 0px rgba($color: $blue_1, $alpha: 0.05);
+      border-radius: 20px;
+    }
+
+    button {
+      padding: 6px 16px;
+      color: #fff;
+      background-color: $orange;
+      border-radius: 30px;
+
+      &:hover {
+        background-color: #ff876f;
+      }
+    }
+  }
+}
+
 footer {
   padding: 40px 0;
   color: #fff;
@@ -639,7 +795,7 @@ footer {
       margin: 80px 0;
 
       img {
-        height: 60px;
+        height: 50px;
       }
     }
 
