--- a/sass/style.scss
+++ b/sass/style.scss
@@ -138,10 +138,15 @@ nav {
     }
   }
 
-  .video {
-    height: 230px;
-    background-color: #ddd;
-    margin-bottom: 20px;
+  .box_selection_video {
+    overflow: hidden;
+    max-height: 100%;
+    height: 240px;
+
+    video {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   a.link {
