--- a/sass/style.scss
+++ b/sass/style.scss
@@ -428,11 +428,23 @@ header {
         font-weight: 800;
       }
     }
+
+    
   }
 
   .box_palabra_detalle_definition {
     margin-bottom: 60px;
 
+    .box_selection_video {
+      overflow: hidden;
+      max-height: 100%;
+      height: 240px;
+
+      video {
+        width: 100%;
+        height: 100%;
+      }
+    }
     .title {
       position: relative;
 
@@ -572,7 +584,7 @@ header {
 
         img {
           position: relative;
-          left:0;
+          left: 0;
         }
       }
 
