--- a/sass/style.scss
+++ b/sass/style.scss
@@ -67,6 +67,18 @@ nav {
     }
   }
 
+  .bx-slider-alt {
+    position: absolute;
+    top: 8px;
+    right: 50px;
+    color: #c3c3c3;
+    font-size: 1.8rem;
+    cursor: pointer;
+    &:hover {
+      color: $blue_1;
+    }
+  }
+
   .btnSearch {
     position: absolute;
     right: 0;
@@ -141,11 +153,18 @@ nav {
   .box_selection_video {
     overflow: hidden;
     max-height: 100%;
-    height: 240px;
+    margin-bottom: 5px;
 
     video {
       width: 100%;
       height: 100%;
+    }
+  }
+
+  .definition {
+    min-height: 60px;
+    p {
+      margin-bottom: 0;
     }
   }
 
@@ -180,7 +199,7 @@ nav {
 }
 
 header {
-  padding: 60px 0 0;
+  padding: 20px 0 0;
   background-color: $background;
 
   .header_textos {
@@ -328,7 +347,7 @@ header {
   .box_main_title {
     display: flex;
     justify-content: center;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
 
     h1 {
       position: relative;
